--- a/index.html
+++ b/index.html
@@ -26,12 +26,28 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/style.css" />
-        
+
         <!-- Javascript -->
         <script type="module" src="src/main.js" defer></script>
         <script type="module" src="src/projects.js" defer></script>
         <script type="module" src="src/active_menu.js" defer></script>
         <script type="module" src="src/type.js" defer></script>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <div>
+                <img src="images/favicon.ico" alt="logo" />
+                <h1><a href="#">SunFive</a></h1>
+            </div>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#work">Work</a></li>
+            </ul>
+        </header>
+        <main>
+            <section>Home</section>
+            <section>Work</section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
