--- a/index.html
+++ b/index.html
@@ -45,9 +45,39 @@
             </ul>
         </header>
         <main>
-            <section>Home</section>
-            <section>Work</section>
+            <section id="home"><p>사용자 경혐(UX)을 중시하는 웹 퍼블리셔</p></section>
+            <section id="work">
+                <h2>My Work</h2>
+                <ul>
+                    <li>
+                        <button>All<span>19</span></button>
+                    </li>
+                    <li>
+                        <button>CodingTest<span>9</span></button>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#" target="_blank"
+                            ><img src="./images/bg-img.jpg" alt="projects1" />
+                            <div>
+                                <h3>project 1</h3>
+                                <p>first project</p>
+                            </div></a
+                        >
+                    </li>
+                </ul>
+            </section>
+            <aside>
+                <a href="#home">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                        <path d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z" />
+                    </svg>
+                </a>
+            </aside>
         </main>
-        <footer></footer>
+        <footer>
+
+        </footer>
     </body>
 </html>
