--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
         <meta property="og:image" content="https://dream-ellie.github.io/portfolio/images/og.webp" />
 
         <!-- pretendard font -->
-        <!-- <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
-        <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" /> -->
-
-        <link rel="stylesheet" as="style" crossorigin href="./font/pretendard-dynamic-subset.css" />
+        <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/f3121faaad.js" crossorigin="anonymous"></script>
@@ -34,50 +31,101 @@
         <script type="module" src="src/type.js" defer></script>
     </head>
     <body>
-        <header>
-            <div>
-                <img src="images/favicon.ico" alt="logo" />
+        <!-- Header -->
+        <header class="header">
+            <div class="header_logo">
+                <img class="header_logo_img" src="images/favicon.ico" alt="logo" />
                 <h1><a href="#">SunFive</a></h1>
             </div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#work">Work</a></li>
+            <ul class="header_menu">
+                <li><a class="header_menu_item active" href="#home">Home</a></li>
+                <li><a class="header_menu_item" href="#work">Work</a></li>
             </ul>
         </header>
+
+        <!-- Main -->
         <main>
-            <section id="home"><p>사용자 경혐(UX)을 중시하는 웹 퍼블리셔</p></section>
-            <section id="work">
-                <h2>My Work</h2>
-                <ul>
-                    <li>
-                        <button>All<span>19</span></button>
-                    </li>
-                    <li>
-                        <button>CodingTest<span>9</span></button>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <a href="#" target="_blank"
-                            ><img src="./images/bg-img.jpg" alt="projects1" />
-                            <div>
-                                <h3>project 1</h3>
-                                <p>first project</p>
-                            </div></a
-                        >
-                    </li>
-                </ul>
+            <!-- home -->
+            <section class="home" id="home">
+                <div class="max-container home_container">
+                    <img class="home_avatar" src="images/avatar.png" alt="sunfive's avatar" />
+                    <h2 class="home_title">Web Publisher, <strong class="home_title-strong">SUNFIVE</strong></h2>
+                    <p class="home_description">사용자 경혐(UX)을 중시하는 웹 퍼블리셔</p>
+                </div>
+            </section>
+            <!-- Work -->
+            <section class="section" id="work">
+                <div class="max-container">
+                    <h2 class="title">My Work</h2>
+                    <p class="description">자바스크립트 실습해보기</p>
+                    <ul class="categories">
+                        <li>
+                            <button class="category category-selected" data-category="all">All <span class="category_count">8</span></button>
+                        </li>
+                        <li>
+                            <button class="category" data-category="CodingTest">CodingTest <span class="category_count">4</span></button>
+                        </li>
+                        <li>
+                            <button class="category" data-category="project2">project2 <span class="category_count">2</span></button>
+                        </li>
+                    </ul>
+                    <ul class="projects">
+                        <li class="project" data-type="CodingTest">
+                            <a href="#" target="_blank">
+                                <img src="https://picsum.photos/500/500" alt="project1" class="project_img" />
+                                <div class="project_metadata">
+                                    <h3 class="project_title">Project #1</h3>
+                                    <p>Clone Coding with HTML, CSS</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project" data-type="CodingTest">
+                            <a href="#" target="_blank">
+                                <img src="https://picsum.photos/500/500" alt="CodingTest" class="project_img" />
+                                <div class="project_metadata">
+                                    <h3 class="project_title">Project #2</h3>
+                                    <p>Clone Coding with HTML, CSS</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project" data-type="project2">
+                            <a href="#" target="_blank">
+                                <img src="https://picsum.photos/500/500" alt="project2" class="project_img" />
+                                <div class="project_metadata">
+                                    <h3 class="project_title">Project #3</h3>
+                                    <p>Clone Coding with HTML, CSS</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project" data-type="CodingTest">
+                            <a href="#" target="_blank">
+                                <img src="https://picsum.photos/500/500" alt="CodingTest" class="project_img" />
+                                <div class="project_metadata">
+                                    <h3 class="project_title">Project #5</h3>
+                                    <p>Clone Coding with HTML, CSS</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project" data-type="project2">
+                            <a href="#" target="_blank">
+                                <img src="https://picsum.photos/500/500" alt="project2" class="project_img" />
+                                <div class="project_metadata">
+                                    <h3 class="project_title">Project #6</h3>
+                                    <p>Clone Coding with HTML, CSS</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <aside>
-                <a href="#home">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                <a class="arrow-up" href="#home" title="back to top">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="#242424" width="2rem" viewBox="0 0 448 512">
                         <path d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z" />
                     </svg>
                 </a>
             </aside>
         </main>
-        <footer>
-
-        </footer>
+        <footer class="section footer"><p>ⓒ SUNFIVE - All rights reserved</p></footer>
     </body>
 </html>
