--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <!-- OG (Open Graph Data) -->
         <meta property="og:title" content="Coding practice for SunFive" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://dream-ellie.github.io/portfolio/" />
-        <meta property="og:image" content="https://dream-ellie.github.io/portfolio/images/og.webp" />
+        <meta property="og:url" content="https://sunfivemin.github.io/coding/portfolio/" />
+        <meta property="og:image" content="https://sunfivemin.github.io/coding/portfolio/images/og.webp" />
 
         <!-- pretendard font -->
         <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
