🎨 boxOffice HTML 구조

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <!-- OG (Open Graph Data) -->
         <meta property="og:title" content="Coding practice for SunFive" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://sunfivemin.github.io/coding/portfolio/" />
-        <meta property="og:image" content="https://sunfivemin.github.io/coding/portfolio/images/og.webp" />
+        <meta property="og:url" content="https://sunfivemin.github.io/coding/" />
+        <meta property="og:image" content="https://sunfivemin.github.io/coding/images/og.webp" />
 
         <!-- pretendard font -->
         <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
@@ -35,7 +35,7 @@
     </head>
     <body>
         <!-- Header -->
-        <hea0er class="header">
+        <header class="header">
             <div class="header_logo">
                 <img class="header_logo_img" src="images/favicon.ico" alt="logo" />
                 <h1><a href="#">SunFive</a></h1>
@@ -44,7 +44,7 @@
                 <li><a class="header_menu_item active" href="#home">Home</a></li>
                 <li><a class="header_menu_item" href="#work">Work</a></li>
             </ul>
-        </hea0er>
+        </header>
 
         <!-- Main -->
         <main>
