--- a/project/finalCodingTest/cardGame/cardGame.html
+++ b/project/finalCodingTest/cardGame/cardGame.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- SEO -->
-        <title>SunFive&#39;s Coding</title>
-        <meta name="description" content="Coding practice for SunFive" />
-        <meta name="author" content="SunFive" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- SEO -->
+    <title>SunFive&#39;s Coding</title>
+    <meta name="description" content="Coding practice for SunFive" />
+    <meta name="author" content="SunFive" />
+    <link
+      rel="shortcut icon"
+      href="https://sunfivemin.github.io/coding/images/favicon.ico"
+      type="image/x-icon"
+    />
 
-        <!-- OG (Open Graph Data) -->
-        <meta property="og:title" content="Coding practice for SunFive" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://sunfivemin.github.io/coding/" />
-        <meta property="og:image" content="https://sunfivemin.github.io/coding/images/og.webp" />
+    <!-- OG (Open Graph Data) -->
+    <meta property="og:title" content="Coding practice for SunFive" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sunfivemin.github.io/coding/" />
+    <meta
+      property="og:image"
+      content="https://sunfivemin.github.io/coding/images/og.webp"
+    />
 
-        <!-- pretendard font -->
-        <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+    <!-- pretendard font -->
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="../style/style.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./src/style/reset.css" />
+    <link rel="stylesheet" href="./src/style/style.css" />
+  </head>
+  <body>
+    <div class="nav-skip">
+      <a href="#cont-nav">영화 정보 목록 바로가기</a>
+      <a href="#cont-company">회사정보 바로가기</a>
+    </div>
+    <h1 class="sr-only">Cinema</h1>
 
-        <!-- Javascript -->
-        <script type="module" src="src/main.js" defer></script>
-    </head>
-    <body>
-        <h1>정글 시네마</h1>
-        <main>
-            <h2>정글 시네마 영화 목록</h2>
-            <header class="header">
-                <h3>영화 정보 목록</h3>
-                <nav>
-                    <ul>
-                        <li><a href="#none">현재상영영화</a></li>
-                        <li><a href="#none">개봉예정영화</a></li>
-                        <li><a href="#none">박스오피스</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <section>
-                <h3>현재 상영 영화 목록</h3>
-            </section>
-        </main>
-        <footer class="section footer">
-            <p>ⓒ SUNFIVE - All rights reserved</p>
-        </footer>
-    </body>
+    <script></script>
+  </body>
 </html>
