--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header class="header">
       <div class="header_logo">
         <img class="header_logo_img" src="images/favicon.ico" alt="logo" />
-        <h1><a href="#">SunFive</a></h1>
+        <h1 class="header_logo_title"><a href="#">SunFive</a></h1>
       </div>
       <ul class="header_menu">
         <li><a class="header_menu_item active" href="#home">Home</a></li>
