🎨 진행바 추가

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <li><a class="header_menu_item active" href="#home">Home</a></li>
         <li><a class="header_menu_item" href="#work">Work</a></li>
       </ul>
+      <div class="progress_bar">
+        <div class="progress_fill"></div>
+      </div>
     </header>
 
     <!-- Main -->
@@ -98,7 +101,7 @@
           </ul>
           <ul class="projects">
             <li class="project" data-type="CodingTest">
-              <a href="#" target="_blank">
+              <a href="/coding/project/finalCodingTest/imageCarousel/imageCarousel.html" target="_blank">
                 <img
                   src="https://picsum.photos/500/500"
                   alt="project1"
@@ -111,7 +114,7 @@
               </a>
             </li>
             <li class="project" data-type="CodingTest">
-              <a href="#" target="_blank">
+              <a href="/coding/project/finalCodingTest/boxOffice/boxOffice.html" target="_blank">
                 <img
                   src="https://picsum.photos/500/500"
                   alt="CodingTest"
