Exclude node_modules

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             src="images/avatar.png"
             alt="sunfive's avatar"
           />
-          <h2 class="home_title" aria-label="Web Publisher, SUNFIVE">
-            Web Publisher, <strong class="home_title-strong">SUNFIVE</strong>
+          <h2 class="home_title" aria-label="Web Developer, SUNFIVE">
+            Web Developer, <strong class="home_title-strong">SUNFIVE</strong>
           </h2>
-          <p class="home_description">사용자 경혐(UX)을 중시하는 웹 퍼블리셔</p>
+          <p class="home_description">사용자 경혐(UX)을 중시하는 웹 개발자</p>
         </div>
       </section>
 
@@ -101,7 +101,10 @@
           </ul>
           <ul class="projects">
             <li class="project" data-type="CodingTest">
-              <a href="/coding/project/finalCodingTest/imageCarousel/imageCarousel.html" target="_blank">
+              <a
+                href="/coding/project/finalCodingTest/imageCarousel/imageCarousel.html"
+                target="_blank"
+              >
                 <img
                   src="https://picsum.photos/500/500"
                   alt="project1"
@@ -114,7 +117,10 @@
               </a>
             </li>
             <li class="project" data-type="CodingTest">
-              <a href="/coding/project/finalCodingTest/boxOffice/boxOffice.html" target="_blank">
+              <a
+                href="/coding/project/finalCodingTest/boxOffice/boxOffice.html"
+                target="_blank"
+              >
                 <img
                   src="https://picsum.photos/500/500"
                   alt="CodingTest"
