--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
       <!-- Work -->
       <section class="section" id="work">
         <div class="max-container">
-          <h2 class="title">My Work</h2>
-          <p class="description">자바스크립트 실습해보기</p>
+          <h2 class="title">Project.</h2>
+          <p class="description">my work</p>
           <ul class="categories">
             <li>
               <button class="category category-selected" data-category="all">
@@ -90,84 +90,128 @@
             </li>
             <li>
               <button class="category" data-category="CodingTest">
-                CodingTest <span class="category_count">4</span>
+                실전 프로젝트 <span class="category_count">5</span>
               </button>
             </li>
             <li>
               <button class="category" data-category="project2">
-                project2 <span class="category_count">2</span>
+                실습 프로젝트 <span class="category_count">3</span>
               </button>
             </li>
           </ul>
           <ul class="projects">
             <li class="project" data-type="CodingTest">
-              <a
-                href="/coding/project/finalCodingTest/imageCarousel/imageCarousel.html"
-                target="_blank"
-              >
+              <a href="https://ecf-mr.vercel.app/" target="_blank">
                 <img
-                  src="https://picsum.photos/500/500"
-                  alt="project1"
+                  src="images/meetingroom.png"
+                  alt="회의실 예약 서비스"
                   class="project_img"
                 />
                 <div class="project_metadata">
-                  <h3 class="project_title">Project #1</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <h3 class="project_title">실전 프로젝트</h3>
+                  <p>회의실 예약 서비스</p>
                 </div>
               </a>
             </li>
             <li class="project" data-type="CodingTest">
-              <a
-                href="/coding/project/finalCodingTest/boxOffice/boxOffice.html"
-                target="_blank"
-              >
+              <a href="https://mcc-topaz.vercel.app/wedding" target="_blank">
                 <img
-                  src="https://picsum.photos/500/500"
+                  src="images/wedding.png"
                   alt="CodingTest"
                   class="project_img"
                 />
                 <div class="project_metadata">
-                  <h3 class="project_title">Project #2</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <h3 class="project_title">실전 프로젝트</h3>
+                  <p>모바일 청첩장</p>
                 </div>
               </a>
             </li>
-            <li class="project" data-type="project2">
-              <a href="#" target="_blank">
+            <li class="project" data-type="CodingTest">
+              <a href="https://gsap-orcin.vercel.app/event/1" target="_blank">
                 <img
-                  src="https://picsum.photos/500/500"
-                  alt="project2"
+                  src="images/gsap.png"
+                  alt="GSAP 스크롤 애니메이션"
                   class="project_img"
                 />
                 <div class="project_metadata">
-                  <h3 class="project_title">Project #3</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <h3 class="project_title">실전 프로젝트</h3>
+                  <p>GSAP 스크롤 애니메이션</p>
+                </div>
+              </a>
+            </li>
+            <li class="project" data-type="CodingTest">
+              <a href="https://portfolio-seonohmin.vercel.app" target="_blank">
+                <img
+                  src="images/react.png"
+                  alt="React 포트폴리오"
+                  class="project_img"
+                />
+                <div class="project_metadata">
+                  <h3 class="project_title">실전 프로젝트</h3>
+                  <p>React 포트폴리오</p>
                 </div>
               </a>
             </li>
             <li class="project" data-type="CodingTest">
               <a href="#" target="_blank">
                 <img
-                  src="https://picsum.photos/500/500"
-                  alt="CodingTest"
+                  src="images/uicomponents.png"
+                  alt="UI 컴포넌트 사이트"
                   class="project_img"
                 />
                 <div class="project_metadata">
-                  <h3 class="project_title">Project #5</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <h3 class="project_title">실전 프로젝트</h3>
+                  <p>UI 컴포넌트 사이트(예정)</p>
                 </div>
               </a>
             </li>
             <li class="project" data-type="project2">
-              <a href="#" target="_blank">
+              <a
+                href="/project/finalCodingTest/boxOffice/boxOffice.html"
+                target="_blank"
+              >
                 <img
-                  src="https://picsum.photos/500/500"
+                  src="images/boxOffice.png"
                   alt="project2"
                   class="project_img"
                 />
                 <div class="project_metadata">
-                  <h3 class="project_title">Project #6</h3>
-                  <p>Clone Coding with HTML, CSS</p>
+                  <h3 class="project_title">실습 프로젝트</h3>
+                  <p>박스오피스 실습</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project" data-type="project2">
+              <a
+                href="/project/finalCodingTest/imageCarousel/imageCarousel.html"
+                target="_blank"
+              >
+                <img
+                  src="img/imageCarousel.png"
+                  alt="project2"
+                  class="project_img"
+                />
+                <div class="project_metadata">
+                  <h3 class="project_title">실습 프로젝트</h3>
+                  <p>이미지 캐러셀 실습</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="project" data-type="project2">
+              <a
+                href="/project/finalCodingTest/movieStar/movieStar.html"
+                target="_blank"
+              >
+                <img
+                  src="img/movieStar.png"
+                  alt="project2"
+                  class="project_img"
+                />
+                <div class="project_metadata">
+                  <h3 class="project_title">실습 프로젝트</h3>
+                  <p>영화 카드 실습</p>
                 </div>
               </a>
             </li>
