--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 target="_blank"
               >
                 <img
-                  src="img/imageCarousel.png"
+                  src="images/imageCarousel.png"
                   alt="project2"
                   class="project_img"
                 />
@@ -205,7 +205,7 @@
                 target="_blank"
               >
                 <img
-                  src="img/movieStar.png"
+                  src="images/movieStar.png"
                   alt="project2"
                   class="project_img"
                 />
